# DART-Pipeline-GUI

./: .dockerignore  .env  Dockerfile  LICENSE  README.md  docker-compose.yml  numpy-2.4.3-cp312-cp312-linux_x86_64.whl  pyproject.toml
.github/workflows/: docker-publish.yml
.streamlit/: config.toml
gui/: Main Page.py
gui/pages/: 1_1. Configuration.py  2_2. Fetching data.py  4_4. Processing data.py
src/dart_pipeline_gui/: Main Page.py  README.md  types.py  utils.py
src/dart_pipeline_gui/pages/: 1_1. Configuration.py  2_2. Fetching data.py  3_3. Bias correction.py  4_4. Processing data.py
