[project]
name = "dart-pipeline-gui"
version = "0.1.0"
description = "This GUI mimics the workflow outlined in the official doc above, providing a visual interface and thin wrapper around the scripts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dart-pipeline",
]

[tool.uv.sources]
dart-pipeline = { git = "https://github.com/kraemer-lab/DART-Pipeline" }

[dependency-groups]
dev = [
    "streamlit>=1.55.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-bash>=0.25.1",
]
