[project]
name = "dart-pipeline-gui"
version = "0.1.0"
description = "This GUI mimics the workflow outlined in the official doc above, providing a visual interface and thin wrapper around the scripts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dart-bias-correct",
    "dart-pipeline",
    "numpy",
]

[tool.uv.sources]
dart-pipeline = { git = "https://github.com/kraemer-lab/DART-Pipeline" }
dart-bias-correct = { git = "https://github.com/DART-Vietnam/dart-bias-correct" }
numpy = { path = "numpy-2.4.3-cp312-cp312-linux_x86_64.whl" }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["streamlit>=1.55.0", "tree-sitter>=0.25.2", "tree-sitter-bash>=0.25.1"]
